possible syntax fix for heroku

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,6 +20,6 @@
     <h3><span id="errorMessage"></span></h3>
     <img id="domo" src="assets/img/domo.png" alt="domo"/>
   </div>
-  <script src="/assets/loginBundle.js"></script>
+  <script src="/assets/loginbundle.js"></script>
 </body>
 </html>
