--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -19,6 +19,6 @@
     <h3><span id="errorMessage"></span></h3>
     <img id="domo" src="assets/img/domo.png" alt="domo"/>
   </div>
-  <script src="/assets/appBundle.js"></script>
+  <script src="/assets/appbundle.js"></script>
 </body>
 </html>
